# easy-dictate

./: .gitignore  AGENTS.md  ELEVENLABS_STREAMING_DESIGN.md  README.md  README.ru.md  claude.md  old_elevenlabs_streaming.rs
.github/workflows/: e2e-tests.yml  release.yml
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  feature-plan-user-requests.md  gemini-ux-analysis.md  improve-ui.md  ui-ux-improvements.md
frontend/: elevenlabs-stt.js  i18n.js  index.html  main.js  mocks.js  overlay.css  overlay.html  overlay.js  styles.css
frontend/js/: app.js  bridge.js  constants.js  hotkey.js  logger.js  settings.js  status.js  toast.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-window.json  overlay-window.json
src-tauri/permissions/: allow-check-for-updates.json  allow-frontend-log.json  allow-get-app-version.json  allow-get_settings.json  allow-install-update.json  allow-ping.json  allow-save_settings.json  allow-settings.json  allow-show-overlay-no-focus.json  allow-toggle-auto-translate.json  elevenlabs-streaming.json  history.json  test-mode.json
src-tauri/src/: audio.rs  audio_stream.rs  elevenlabs.rs  elevenlabs_handler.rs  elevenlabs_streaming.rs  groq.rs  groq_llm.rs  input.rs  lib.rs  openai.rs  settings.rs
src-tauri/src/core/: commands.rs  error.rs  events.rs  hotkey.rs  mod.rs  state.rs  transcription.rs  tray.rs
tests/: CRITICAL_FIXES_SUMMARY.txt  E2E_VALIDATION_README.txt  E2E_VALIDATION_REPORT.md  VALIDATION_SUMMARY.txt
tests/e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  run-tests.bat  run-tests.ps1  tsconfig.json  wdio.conf.ts
tests/e2e/ci-artifacts/e2e-logs/: report_should capture keyboard hotkey in UI_1765313514809.json  report_should handle invalid API key gracefully_1765313541005.json  report_should respond to global hotkey press_1765313533574.json  report_should respond to simulated hotkey via backend_1765313520763.json  report_should respond to simulated hotkey via backend_1765313526813.json  report_should respond to simulated hotkey via backend_1765313532735.json  should_capture_keyboard_hotkey_in_UI_1765313513700.json  should_capture_screenshot_sequence_1765313542699.json  should_detect_console_errors_1765313544311.json  should_display_correct_initial_status_1765313503875.json  should_enter_hotkey_recording_mode_1765313512593.json  should_load_saved_settings_1765313506741.json  (+19 more)
tests/e2e/scripts/: setup-audio.ts
tests/e2e/specs/: app.spec.ts
tests/e2e/utils/: audio-mock.ts  hotkey-tester.ts  test-utils.ts
(+2 files in other folders)
