[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dev-server"
path = "src/bin/dev_server.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
thiserror = "1.0"
enigo = { version = "0.6.1" }
percent-encoding = "2"
